2009-11-04  Miguel de Dios <miguel.dedios@artica.es>
	* DEBIAN/make_deb_package.sh: move the script to make the deb package into
	the DEBIAN and change some things into the sourcecode for the directory
	change.

2009-12-03  Miguel de Dios <miguel.dedios@artica.es>
	* DEBIAN/control, DEBIAN/md5sums, DEBIAN/postinst, DEBIAN/prerm,
	DEBIAN/conffiles: debian base files for to make a .deb package.
	* make_deb_package.sh: shell script for make automatically the deb package
	for standard installation in a Debian Lenny, this script make a package
	"pandorafms.server_3.0.0.rc1.deb" and the other necesary packages (perl).

2009-11-01  Ramon Novoa  <rnovoa@artica.es>

	* util/pandora_db.pl: Date::Manip is not used anymore.

2009-10-26  Sancho Lerena <slerena@artica.es>

	* spec: Added net-tools dependency (includes ping and traceroute).
	Updated release of spec.

2009-10-21  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/Core.pm: Fixed max_min alerts.

2009-10-21  Sancho Lerena <slerena@artica.es>

	First bug detected & fixed after RC1, whoah :/

	* lib/PandoraFMS/Core.pm: Max/Min alert logic is inverted on match check
	box/switch option in interface. Fixed in server code. This is applicable
	only on max & min alert (when used both).

2009-10-20  Sancho Lerena <slerena@artica.es>

	RC1 Release date

	* lib/Config.pm: Updated build.

	* util/pandora_server: Fixed incorrect message for SUSE daemon when stop
	the server.

2009-10-20  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/SNMPServer.pm: Save as much information as possible if
	  the trap could not be properly parsed.

	* lib/PandoraFMS/Core.pm: Changed the name of the alert name macro to
	  avoid conflicts with other macros.

2009-10-20  Sancho Lerena <slerena@artica.es>

        * tools.pm, core.pm: Float data with "," will be replace this
        character with "." and manage it properly as float.


2009-10-16  Sancho Lerena <slerena@artica.es>
