@@ -1,3 +1,10 @@
+2009-11-04  Ramon Novoa  <rnovoa@artica.es>
+
+	* lib/PandoraFMS/DB.pm, lib/PandoraFMS/Core.pm,
+	  lib/PandoraFMS/DataServer.pm, lib/PandoraFMS/WMIServer.pm,
+	  bin/pandora_server, util/pandora_db.pl: Fixed all pending tracker
+	  bugs.
+
 2009-11-04  Miguel de Dios <miguel.dedios@artica.es>
 	* DEBIAN/make_deb_package.sh: move the script to make the deb package into
 	the DEBIAN and change some things into the sourcecode for the directory
